--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-typing-effect": "^2.0.4",
+    "typeit": "^7.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
